# hackaton-me

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/cashapp/: admin.py  env_settings.py  messengers.py  models.py  pydantic_models.py  urls.py  utils.py  views.py
backend/cashapp/clients/: sbp.py
backend/cashapp/migrations/: 0002_order_qr_id_order_qr_status_order_qr_url_and_more.py  0003_order_uuid.py  0004_alter_order_email_alter_order_merchant_reply_and_more.py  0005_alter_event_background_alter_event_logo.py  0006_alter_event_name_alter_eventqrcode_alias_and_more.py  0007_remove_order_qr_status_alter_order_email_and_more.py  0008_alter_order_email_alter_order_phone_and_more.py  0009_alter_order_qr_url_alter_order_tickets_count.py  0010_alter_order_tickets_count.py
backend/cashapp/services/: barcodes.py
backend/my_project/: settings.py  urls.py
backend/my_project/cashapp/: apps.py  models.py
backend/my_project/cashapp/migrations/: 0001_initial.py
backend/my_project/my_project/: settings.py
backend/my_project/templates/admin/cashapp/eventqrcode/: change_form.html
backend/my_project/templates/admin/cashapp/order/: change_form.html
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/fonts/: stylesheet.css
frontend/src/: main.tsx
frontend/src/common/: contexts.ts  helpers.ts  index.ts  schemas.ts  settings.ts  store.ts
frontend/src/components/: index.ts
frontend/src/components/MainEntrypoint/: MainEntrypoint.tsx  index.ts
frontend/src/screens/: index.ts
(+10 files in other folders)
